# life-like

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  tsconfig.json  webpack.config.cjs  webpack.config.js
.github/workflows/: build_and_deploy.yml
core/: Cargo.toml  Makefile  README.md
core/src/: cell.rs  config.rs  layout.rs  lib.rs  renderer.rs  rule.rs  world.rs
scripts/: build-pattern-library.js  download-patterns.sh  install-patterns.sh  update-patterns.sh
src/: Constants.ts  Locator.ts  index.html  main.ts
src/ECS/: Components.ts  Entity.ts  World.ts
src/ECS/systems/: LifecycleSystem.ts  RenderSystem.ts  System.ts
src/ECS/utils/: NeighborUtils.ts
src/components/: events.ts  x-app.ts  x-control-group.ts  x-controls.ts  x-sidebar.ts  x-world-controls.ts
src/controllers/: AppController.ts  ConfigController.ts  GameController.ts  LayoutController.ts  PlaybackController.ts
src/core/: Cell.ts  Config.ts  Layout.ts  Library.ts  Playback.ts  Renderer.ts  World.ts
src/game/: Cell.ts  Rules.ts  World.ts
src/game/controllers/: ConfigController.ts  (+7 more)
src/models/: PlaybackModel.ts
src/plugins/: PluginBuilder.ts  PluginManager.ts
src/stores/: AppStore.ts  ConfigStore.ts  DialogStore.ts  DrawerStore.ts  LayoutStore.ts  LibraryStore.ts  PlaybackStore.ts
src/ui/: x-app.ts  x-control-group.ts  x-dialog-container.ts  x-pattern-browser.ts  x-pattern-library.ts  x-settings.ts  x-sidebar.ts
src/utils/: DownloadUtils.ts  MathUtils.ts  RuleUtils.ts
(+14 files in other folders)
