[package]
name = "life-like-core"
version = "0.1.0"
authors = ["Steve Davis <steve@celery.club>"]
edition = "2021"
description = "Life-like"
repository = "https://github.com/celeryclub/life-like"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3.64"
rand = "0.8.5"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
